feat(module-5-search)
add filter support via query parameters (minAge, maxAge, type, category, price)